--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -14,7 +14,7 @@ i2b2.version=1706
 
 ## I2B2 properties
 #pacages
-packages.dir=/vagrant/packages/
+packages.dir=/opt/aktin/packages/
 # package v2 with wildfly webinf
 #packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/37qXFFdFReNlqlP/download 
 # package v2.1
@@ -37,12 +37,11 @@ db.driver.url=https://cloudstorage.uni-oldenburg.de/index.php/s/PkC9jJiUeZ8ILBQ/
 dwh.j2ee.ear=dwh-j2ee-0.5-SNAPSHOT.ear
 dwh.j2ee.ear.url=https://cloudstorage.uni-oldenburg.de/index.php/s/nh1D9O621kXN0Kq/download
 
-base.dir=/vagrant/
-ant.installdata.dir=/vagrant/i2b2_install/
-i2b2.src.dir=/vagrant/i2b2_install/i2b2_src
+ant.installdata.dir=/opt/aktin/temp_install/
+i2b2.src.dir=/opt/aktin/temp_install/i2b2_src
 
 web.html.dir=/var/webroot
-log.dir=/vagrant/logs/ant
+install-log.dir=/opt/aktin/logs/ant-install/
 hive.dir=db_hive/
 pm.dir=db_pm/
 im.dir=db_im/
