--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -9,6 +9,11 @@
 	<artifactId>dwh-install</artifactId>
 	<version>0.1-SNAPSHOT</version>
 
+	<properties>
+		<mvn.prepare.logdir>$install_root/logs</mvn.prepare.logdir>
+		<mvn.prepare.packagedir>$install_root/packages</mvn.prepare.packagedir>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.aktin</groupId>
