--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -35,6 +35,9 @@
 							<goal>single</goal>
 						</goals>
 						<configuration>
+							<filters>
+								<filter>src/assembly/filter.properties</filter>
+							</filters>
 							<descriptors>
 								<descriptor>src/assembly/package.xml</descriptor>
 							</descriptors>
@@ -44,4 +47,36 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+<!-- 	<profiles>
+		<profile>
+			<id>debian-build</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>build.destiny.type</name>
+					<value>debian</value>
+				</property>
+			</activation>
+			<properties>
+				<application-home>/path/to/application</application-home>
+			</properties>
+		</profile>
+	</profiles>
+	<profiles>
+		<profile>
+			<id>centos-build</id>
+			<activation>
+				<property>
+					<name>build.destiny.type</name>
+					<value>centos</value>
+				</property>
+			</activation>
+			<properties>
+				<application-home>/path/to/application</application-home>
+			</properties>
+		</profile>
+	</profiles> -->
+	
 </project>
