--- a/dwh-install/src/main/resources/i2b2_install/build.properties
+++ b/dwh-install/src/main/resources/i2b2_install/build.properties
@@ -3,25 +3,20 @@
 
 ## JBOSS HOME
 app.base.dir=/opt
-jboss.home=/opt/wildfly-9.0.2.Final
+# jboss.home=/opt/wildfly-9.0.2.Final
 axis2.war.name=i2b2.war
-dwh.j2ee.ear=dwh-j2ee-0.5-SNAPSHOT.ear
-bin.includes = lib/jdom/jdom.jar
-bin.includes = lib/jdom/jdom-contrib.jar
+
+# bin.includes = lib/jdom/jdom.jar
+# bin.includes = lib/jdom/jdom-contrib.jar
 jboss.dir.exist=false
 ip.addr=127.0.0.1
 i2b2.version=1706
 
 ## I2B2 properties
-#pacages
-packages.dir=/opt/aktin/packages/
-# package v2 with wildfly webinf
-#packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/37qXFFdFReNlqlP/download 
-# package v2.1
-#packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/m1xEHGNKVPIUo1w/download
+#packages
+# packages.dir=/opt/aktin/packages/
 axis2.zip.name=axis2-1.6.3-war.zip
 axis2.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/67OY8vh6BSZq56w/download
-#axis2.patch.zip.name=wildfly-deployment-i2b2war-WEB-INF.zip
 axis2.patch.zip.name=jboss-deployment-i2b2war-WEB-INF.zip
 axis2.patch.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/0gRdGNsseGM5Gf9/download
 i2b2.db.name=i2b2createdb-1706.zip
@@ -34,14 +29,15 @@ jboss.zip.name=wildfly-9.0.2.Final.zip
 jboss.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/l8o6SM3Hueaxpen/download
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.driver.url=https://cloudstorage.uni-oldenburg.de/index.php/s/PkC9jJiUeZ8ILBQ/download
-dwh.j2ee.ear=dwh-j2ee-0.5-SNAPSHOT.ear
-dwh.j2ee.ear.url=https://cloudstorage.uni-oldenburg.de/index.php/s/nh1D9O621kXN0Kq/download
+# TODO solve with mvn dependencies -> pom. remove download from ant and installer 
+dwh.j2ee.ear=dwh-j2ee-*.ear
+# dwh.j2ee.ear.url=https://cloudstorage.uni-oldenburg.de/index.php/s/nh1D9O621kXN0Kq/download
 
-ant.installdata.dir=/opt/aktin/temp_install/
-i2b2.src.dir=/opt/aktin/temp_install/i2b2_src
+# ant.installdata.dir=/opt/aktin/temp_install/
+# i2b2.src.dir=/opt/aktin/temp_install/i2b2_src
 
 web.html.dir=/var/webroot
-install-log.dir=/opt/aktin/logs/ant-install/
+# install-log.dir=/opt/aktin/logs/ant-install/
 hive.dir=db_hive/
 pm.dir=db_pm/
 im.dir=db_im/
@@ -69,6 +65,7 @@ db.password=i2b2
 
 db.hive.id=i2b2demo
 
+#postgres nutzer für mport von SQL Dateien in den Ordnern db_...
 db.hive.user=i2b2hive
 db.hive.pwd=i2b2hive
 db.pm.user=i2b2pm
@@ -81,36 +78,4 @@ db.meta.user=i2b2metadata
 db.meta.pwd=i2b2metadata
 db.crc.user=i2b2crcdata
 db.crc.pwd=i2b2crcdata
-
-# replace properties
-db.IPADDR=@IPADDR@
-
-db.DBTYPE=@DBTYPE@
-db.DBTYPENAME=@DBTYPENAME@
-db.DBPROJECT=@I2B2PROJECT@
-db.DBPROJECTNAME=@I2B2PROJECTNAME@
-db.DBPROJECTUNAME=@I2B2PROJECTUNAME@
-db.DBNAME=@DBNAME@
-db.SERVERURL=@SERVERURL@
-db.DBDRIVER=@DBDRIVER@
-db.DBDRIVERJAR=@DBDRIVERJAR@
-db.DBURL=@DBURL@
-db.DBUSER=@DBUSER@
-db.DBPWD=@DBPWD@
-
-db.HIVEID=@I2B2HIVEID@
-
-db.HIVEUSER=@I2B2HIVEUSER@
-db.HIVEPWD=@I2B2HIVEPWD@
-db.PMUSER=@I2B2PMUSER@
-db.PMPWD=@I2B2PMPWD@
-db.IMUSER=@I2B2IMUSER@
-db.IMPWD=@I2B2IMPWD@
-db.WORKUSER=@I2B2WORKUSER@
-db.WORKPWD=@I2B2WORKPWD@
-db.METAUSER=@I2B2METAUSER@
-db.METAPWD=@I2B2METAPWD@
-db.DEMOUSER=@I2B2DEMOUSER@
-db.DEMOPWD=@I2B2DEMOPWD@
-
 
