--- a/dwh-install/src/main/resources/i2b2_install/build.properties
+++ b/dwh-install/src/main/resources/i2b2_install/build.properties
@@ -54,16 +54,16 @@ db.ip.addr=localhost
 db.type.name=PostgreSQL
 db.server=localhost:5432/
 db.name=i2b2
-db.project=demo
-db.project.name=Demo
-db.project.uname=i2b2_DEMO
+# db.project=demo
+# db.project.name=Demo
+# db.project.uname=i2b2_DEMO
 db.driver=org.postgresql.Driver
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
 db.username=postgres
 db.password=i2b2
 
-db.hive.id=i2b2demo
+# db.hive.id=i2b2demo
 
 #postgres nutzer für mport von SQL Dateien in den Ordnern db_...
 db.hive.user=i2b2hive
