--- a/dwh-install/pom.xml
+++ b/dwh-install/pom.xml
@@ -18,25 +18,60 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>install-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptors>
-								<descriptor>src/assembly/package.xml</descriptor>
-							</descriptors>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+	
+
+	<profiles>
+        <profile>
+        	<id>aktin-installer</id>
+        	<activation>
+        		<activeByDefault>true</activeByDefault>
+        	</activation>
+        	<build>
+        		<plugins>
+        			<plugin>
+        				<artifactId>maven-assembly-plugin</artifactId>
+        				<executions>
+        					<execution>
+        						<id>install-assembly</id>
+        						<phase>package</phase>
+        						<goals>
+        							<goal>single</goal>
+        						</goals>
+        						<configuration>
+        							<descriptors>
+        								<descriptor>src/assembly/package.xml</descriptor>
+        							</descriptors>
+        						</configuration>
+        					</execution>
+        				</executions>
+        			</plugin>
+        		</plugins>
+        	</build>
+        </profile>
+        <profile>
+        	<id>aktin-package-only</id>
+        	<build>
+        		<plugins>
+        			<plugin>
+        				<artifactId>maven-assembly-plugin</artifactId>
+        				<executions>
+        					<execution>
+        						<id>aktin-package-only</id>
+        						<phase>package</phase>
+        						<goals>
+        							<goal>single</goal>
+        						</goals>
+        						<configuration>
+        							<descriptors>
+        								<descriptor>src/assembly/package_only.xml</descriptor>
+        							</descriptors>
+  									<finalName>package</finalName>
+        						</configuration>
+        					</execution>
+        				</executions>
+        			</plugin>
+        		</plugins>
+        	</build>
+        </profile>
+    </profiles>
 </project>
