--- a/dwh-install/src/assembly/package.xml
+++ b/dwh-install/src/assembly/package.xml
@@ -19,27 +19,16 @@
 	</dependencySets>
 
     <fileSets>
-        <!--
-            Adds startup scripts to the root directory of zip package. The startup
-            scripts are copied from the src/main/scripts directory.
-        -->
         <fileSet>
             <directory>${project.build.scriptSourceDirectory}</directory>
             <outputDirectory>/aktin-dwh-snapshot</outputDirectory>
-            <!-- enable resource filtering to replace ${property.names} -->
-            <filtered>false</filtered>
+            <filtered>true</filtered>
         </fileSet>
         <fileSet>
             <directory>src/main/resources</directory>
             <outputDirectory>/aktin-dwh-snapshot</outputDirectory>
             <filtered>false</filtered>
-            <!--src/main/resources/i2b2_install/build.properties-->
         </fileSet>
-<!--         <fileSet>
-            <directory>packages</directory>
-            <outputDirectory>/packages</outputDirectory>
-            <filtered>false</filtered>
-        </fileSet> -->
     </fileSets>
 
 </assembly>
