updated simple cdd profile

--- a/dwh-install/src/testing/simple-cdd/profiles/aktin.conf
+++ b/dwh-install/src/testing/simple-cdd/profiles/aktin.conf
@@ -3,3 +3,4 @@ mirror_components="main contrib non-free"
 simple_cdd_dir=$(pwd)
 backports="true"
 cd_extras="$simple_cdd_dir/local_extras"
+backports_packages="openjdk-8-jre-headless"
