--- a/dwh-install/src/testing/Vagrantfile
+++ b/dwh-install/src/testing/Vagrantfile
@@ -6,7 +6,7 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 Vagrant.configure(2) do |config|
-  config.vm.box = "bento/debian-8.2" # "boxcutter/debian82" # "deb/jessie-amd64"
+  config.vm.box = "bento/debian-8.3"
   config.vm.provision :shell, path: "install_debian.sh"
   
   # Troubleshooting if startup fails:
