--- a/aktin-cdd/src/main/scripts/Vagrantfile
+++ b/aktin-cdd/src/main/scripts/Vagrantfile
@@ -7,7 +7,7 @@
 # you're doing.
 Vagrant.configure(2) do |config|
   config.vm.box = "bento/debian-8.3"
-  config.vm.provision :shell, path: "${install_file}"
+  config.vm.provision :shell, path: "simple_cdd_vm_install.sh"
   
   # Troubleshooting if startup fails:
   #config.vm.provider :virtualbox do |vb|
