amend: vm for creating iso

--- a/aktin-cdd/src/assembly/package.xml
+++ b/aktin-cdd/src/assembly/package.xml
@@ -39,7 +39,7 @@
         </fileSet>
         <fileSet>
             <directory>src/main/resources/scdd-tools/build</directory>
-            <outputDirectory></outputDirectory>
+            <outputDirectory>/tools</outputDirectory>
             <filtered>false</filtered>
         </fileSet>
         <fileSet>
