--- a/aktin-cdd/src/main/scripts/Vagrantfile
+++ b/aktin-cdd/src/main/scripts/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure(2) do |config|
   # config.vm.box_check_update = false
 
 # webserver
-  config.vm.network "forwarded_port", guest: 80, host: 80
+  # config.vm.network "forwarded_port", guest: 80, host: 80
 
 # i2b2 web services
 #  config.vm.network "forwarded_port", guest: 9090, host: 9090
@@ -31,11 +31,11 @@ Vagrant.configure(2) do |config|
 #  config.vm.network "forwarded_port", guest_ip: "127.0.0.1", guest: 9990, host: 9990
 
 # postgresql
-  config.vm.network "forwarded_port", guest: 5432, host: 15432
+  # config.vm.network "forwarded_port", guest: 5432, host: 15432
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.33.11"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
