--- a/dwh-install/src/main/resources/i2b2_install/build.xml
+++ b/dwh-install/src/main/resources/i2b2_install/build.xml
@@ -129,6 +129,11 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
             <replacefilter token="webservices.i2b2.org" value="${ip.addr}:9090"/>
             <replacefilter token="services.i2b2.org" value="${ip.addr}:9090"/>
             <replacefilter token="rest" value="services"/>
+        </replace>    
+        <copy file="${i2b2.src.dir}/webclient/js-i2b2/cells/PM/PM_misc.js" tofile="${i2b2.src.dir}/webclient/js-i2b2/cells/PM/PM_misc.js.orig"/>
+        <replace file="${i2b2.src.dir}/webclient/js-i2b2/cells/PM/PM_misc.js">
+            <replacefilter token='name="uname" id="loginusr" value="demo"' value='name="uname" id="loginusr" value=""'/>
+            <replacefilter token='name="pword" id="loginpass" value="demouser"' value='name="pword" id="loginpass" value=""'/>
         </replace>   
 
         <copy file="${i2b2.src.dir}/admin/i2b2_config_data.js" tofile="${i2b2.src.dir}/admin/i2b2_config_data.js.orig"/>
