--- a/dwh-update/local_smtp_settings.conf
+++ b/dwh-update/local_smtp_settings.conf
@@ -1,5 +1,5 @@
-smtphost=smtp.googlemail.com
+smtphost=smtp.aktin.com
 smtpport=465
-smtpuser=lincor.maniac@gmail.com
-smtppass=Jewel20078
+smtpuser=test.user@aktin.com
+smtppass=secure3Password
 usessl=true
